--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -8,7 +8,17 @@ can be found in the LICENSE file at https://angular.io/license
 <h2>Products</h2>
 
 <div *ngFor="let product of products">
-  <h3>
+
+<h3>
+  <a [title]="product.name + ' details'">
     {{ product.name }}
-  </h3>
+  </a>
+</h3>
+<p *ngIf="product.description">
+Description: {{ product.description }}
+</p>
+<button type="button" (click)="share()">
+Share
+</button>
 </div>
+
