--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -20,5 +20,8 @@ Description: {{ product.description }}
 <button type="button" (click)="share()">
 Share
 </button>
+<app-product-alerts
+  [product]="product">
+</app-product-alerts>
 </div>
 
