Added notify functionality

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -21,7 +21,8 @@ Description: {{ product.description }}
 Share
 </button>
 <app-product-alerts
-  [product]="product">
+  [product]="product"
+  (notify)="onNotify()">
 </app-product-alerts>
 </div>
 
