--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,4 @@
-<p>cart works!</p>
+<div class="cart-item" *ngFor="let item of items">
+<span>{{ item.name }}</span>
+<span>{{ item.price | currency }}</span>
+</div>
